[gd_scene load_steps=30 format=2]

[ext_resource path="res://art/enemies/SoldierMovementSheet.png" type="Texture" id=1]
[ext_resource path="res://art/enemies/SoldierIdleSheet.png" type="Texture" id=2]
[ext_resource path="res://art/enemies/SoldierAttackSheet.png" type="Texture" id=3]
[ext_resource path="res://objects/characters/enemies/EnemySoldier.gd" type="Script" id=4]
[ext_resource path="res://objects/characters/enemies/EnemySoldierFSM.gd" type="Script" id=5]
[ext_resource path="res://fonts/Warioland4chmc.ttf" type="DynamicFontData" id=6]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 1, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 20, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 39, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 58, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 77, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 1, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 20, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 39, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 58, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 77, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 1, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 20, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 39, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 58, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 77, 1, 18, 17 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 1, 19, 18, 17 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 20, 19, 18, 17 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 39, 19, 18, 17 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 58, 19, 18, 17 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walking",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 8.25 )

[sub_resource type="CircleShape2D" id=22]
radius = 190.444

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 6 )

[node name="EnemySoldier" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 2 )
animation = "idle"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FloorChecker" type="RayCast2D" parent="CollisionShape2D"]
position = Vector2( 7, 4 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="FloorChecker2" type="RayCast2D" parent="CollisionShape2D"]
position = Vector2( -6, 4 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="WallChecker" type="RayCast2D" parent="CollisionShape2D"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="StandingTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="WalkingTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShootLine" type="Line2D" parent="."]
visible = false
position = Vector2( 0, -1 )
points = PoolVector2Array( 0, 0, 11, 0 )
width = 1.0
default_color = Color( 0.729412, 0.0627451, 0.172549, 1 )

[node name="Position2D" type="Position2D" parent="ShootLine"]
position = Vector2( 10, 0 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 22 )

[node name="TestLabel" type="Label" parent="."]
visible = false
margin_left = -10.0
margin_top = -14.0
margin_right = 108.0
margin_bottom = 1.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 23 )
text = "s"

[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="WalkingTimer" to="." method="_on_WalkingTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
